# evidence-grounded-analytics-copilot

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_import_test.py  streamlit_question_test.py  streamlit_smoke.py  streamlit_startup_test.py
.streamlit/: config.toml
app/: config.py  copilot.py  streamlit_app.py  streamlit_app.py.visual-backup
app/analytics/: build_metadata.py  delivery.py  metrics.py  profiling.py  revenue.py  semantic.py
app/database/: ingestion.py  validation.py
app/evidence/: engine.py  handlers.py  investigations.py  models.py  registry.py  router.py
app/llm/: client.py  config.py  explainer.py  prompts.py  rewriter.py
tests/: test_delivery.py  test_evidence_engine.py  test_explainer.py  test_ingestion.py  test_investigations.py  test_metrics.py  test_revenue.py  test_semantic_metadata.py
