[project]
name = "evidence-grounded-analytics-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]

[dependency-groups]
dev = [
    "kaggle>=2.2.3",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]